hphp/hack/test/typecheck/reading_from_append_2.php.exp
File "reading_from_append_2.php", line 9, characters 3-4:
Cannot use [] for reading (NastCheck[3047])
